<resources>
    <string name="app_name">INF8405 - Smart Museum</string>
    <string name="google_maps_key">AIzaSyAtf685dJo_k6JfJq-m5O6h0cjEgzgk9cU</string>
    <string name="old_key">AIzaSyBo0gnuqIEbMEiQogFGL4c1IXWvN-b2NwU</string>
    <!--Login-->
    <string name="login_name">Nom d\'utilisateur</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_btn_login">Se connecter</string>
    <string name="login_btn_register">S\'enregistrer</string>
    <string name="login_error_failed_username">Le nom d\'utilisateur n\'est pas reconnu</string>
    <string name="login_error_failed_password">Le mot de passe est invalide</string>
    <string name="lbl_BatteryStatus">État de la batterie :</string>
    <string name="lbl_InternetStatus">Statut de l\'Internet :</string>
    <string name="lbl_gps">État du GPS :</string>
    <string name="lbl_Latitude">Latitude :</string>
    <string name="lbl_Longitude">Longitude :</string>
    <string name="lbl_UserID">User ID :</string>
    <string name="lbl_Log">Statut des Permissions :</string>
    <string name="pref_file_key">LAB3_PREF_FILE_KEY</string>
    <string name="msg_yes">Oui</string>
    <string name="msg_no">Non</string>
    <string name="msg_sync">Voulez-vous synchroniser la liste Favorite via NFC?</string>
    <!--Main menu-->
    <string name="main_menu_btn_add_artwork">Ajouter une oeuvre</string>
    <string name="main_menu_btn_browse_artwork">Découvrir des oeuvres</string>
    <string name="main_menu_btn_view_favorites">Voir mes favoris</string>
    <string name="main_menu_btn_view_map">Voir la carte</string>
    <string name="main_menu_btn_browse_museums">Découvrir des musées</string>
    <string name="main_menu_btn_add_museum">Ajouter un musée</string>
    <!--Add Artwork-->
    <string name="add_artwork_btn_photo_from_camera">Prendre une photo</string>
    <string name="add_artwork_name">Nom de l\'oeuvre</string>
    <string name="add_artwork_description">Description de l\'oeuvre</string>
    <string name="add_artwork_btn_add_artwork">Ajouter l\'oeuvre</string>
    <string name="add_artwork_message_success">L\'oeuvre a été ajoutée</string>
    <string name="add_artwork_message_failure">L\'oeuvre n\'a pu être ajoutée</string>
    <string name="add_artwork_frag_name">Name</string>
    <string name="add_artwork_frag_desc">Description</string>
    <!--Add Museum-->
    <string name="add_museum_btn_photo_from_camera">Prendre une photo</string>
    <string name="add_museum_name">Nom du musée</string>
    <string name="add_museum_description">Description du musée</string>
    <string name="add_museum_address">Addresse du musée</string>
    <string name="add_museum_btn_add_museum">Ajouter le musée</string>
    <string name="add_museum_message_success">Le musée a été ajoutée</string>
    <string name="add_museum_message_failure">Le musée n\'a pu être ajouté</string>
    <string name="add_museum_frag_name">Name</string>
    <string name="add_museum_frag_desc">Description</string>
    <string name="add_museum_frag_addr">Address</string>
    <!--Popup info -->
    <string name="popup_info_distance">Distance</string>
    <string name="orientation_msg">La meilleure vue sera réalisée en orientation portrait.</string>
    <string name="nfc_msg">Ce périphérique ne prend pas en charge NFC.</string>
    <!--Permissions-->
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">Permission rationale location</string>
    <string name="popup_info_address">Adresse</string>
    <!--Sort info -->
    <string name="sort_label_sort_by">Trier par</string>
    <string name="sort_distance">Distance</string>
    <string name="sort_rating">Appr</string>
</resources>
