<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/dim_vertical_padding"
        android:paddingRight="@dimen/dim_vertical_padding"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.inf8405.polymtl.lab3.activities.MainMenuActivity">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/dim_vertical_padding"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/main_menu_btn_add_artwork"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/add_artwork_btn_add_artwork"
                    android:src="@drawable/add"/>

                <ImageButton
                    android:id="@+id/main_menu_btn_browse_artwork"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/main_menu_btn_browse_artwork"
                    android:src="@drawable/search"/>
            </TableRow>

            <ImageButton
                android:id="@+id/main_menu_btn_add_museum"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/main_menu_btn_add_museum"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_menu_btn_add_artwork"
                />

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/main_menu_btn_view_favorite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/main_menu_btn_view_favorites"
                    android:src="@drawable/fav"/>

                <ImageButton
                    android:id="@+id/main_menu_btn_browse_museums"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/main_menu_btn_browse_museums"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_menu_btn_browse_artwork"
                    />

                <ImageButton
                    android:id="@+id/main_menu_btn_view_map"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/main_menu_btn_view_map"
                    android:src="@drawable/map"/>
            </TableRow>


            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/reserved"/>

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/reserved"/>
            </TableRow>


        </TableLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>