<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.inf8405.polymtl.lab3.activities.AddArtworkActivity">

        <ImageView
            android:id="@+id/add_artwork_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera"
            />

        <Button
            android:id="@+id/add_artwork_btn_photo_from_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_artwork_btn_photo_from_camera"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_artwork_image"
            />

        <EditText
            android:id="@+id/add_artwork_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_artwork_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_artwork_btn_photo_from_camera"/>

        <EditText
            android:id="@+id/add_artwork_description"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/add_artwork_description"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_artwork_name"/>

        <Button
            android:id="@+id/add_artwork_btn_add_artwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_artwork_btn_add_artwork"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_artwork_description"
            />

    </android.support.constraint.ConstraintLayout>
</ScrollView>