<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/popup_artwork_info_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/popup_artwork_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_artwork_frag_name"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_artwork_info_image"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/popup_artwork_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/add_artwork_frag_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popup_artwork_info_name" />

        <ImageButton
            android:id="@+id/popup_artwork_info_imageButton"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:contentDescription="@string/main_menu_btn_browse_artwork"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/facebook_icon" />

        <ImageButton
            android:id="@+id/popup_artwork_twitter_imageButton"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="@dimen/dim_start_padding"
            android:background="@null"
            android:contentDescription="@string/main_menu_btn_browse_artwork"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/popup_artwork_info_imageButton"
            app:srcCompat="@drawable/twitter" />

        <ImageButton
            android:id="@+id/popup_artwork_favorite_imageButton"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="@dimen/dim_start_padding"
            android:background="@null"
            android:contentDescription="@string/main_menu_btn_browse_artwork"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/favorite" />

        <TextView
            android:id="@+id/popup_artwork_info_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/popup_info_distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/popup_artwork_info_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/popup_artwork_info_description"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>